<resources>
    <string name="app_name">Attendy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="login_with_google">Login with google</string>
    <string name="or">or</string>
    <string name="forget_password">Forget password?</string>
    <string name="don_t_have_any_account">Don\'t have any account?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="field_marked">Fields marked <font color="#F04770">*</font> are required</string>
    <string name="email_required">Email<font color="#F04770">*</font></string>
    <string name="password_required">Password<font color="#F04770">*</font></string>
    <string name="password_confirmation_required">Password Confirmation<font color="#F04770">*</font></string>
    <string name="full_name_required">Full Name<font color="#F04770">*</font></string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="registration_form">Registration Form</string>
    <string name="good_morning">Good Morning!</string>
    <string name="performance">Performance</string>
    <string name="do_attendance">Do Attendance</string>
    <string name="attendance_history">Attendance History</string>
    <string name="see_all"><![CDATA[See all >>]]></string>
    <string name="punch_in">Punch In</string>
    <string name="location">Location</string>
    <string name="punch_out">Punch Out</string>
    <string name="select_location">Select Location</string>
    <string name="email_doesn_t_match_format">Email doesn\'t match format</string>
    <string name="minimum_password_is_8_characters">Minimum password is 8 characters</string>
    <string name="please_fill_this_field">Please fill this field</string>
    <string name="password_doesn_t_match">Password doesn\'t match</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="change_location">Change Location</string>
    <string name="check_in_due">Check in due:</string>
    <string name="check_out_starts">Check out starts:</string>
    <string name="select_location_below">Select location below</string>
    <string name="create_new">Create New</string>
    <string name="create_location">Create Location</string>
    <string name="location_name">Location Name</string>
    <string name="enter_the_location_name">Enter the location name</string>
    <string name="enter_the_location_address">Enter the location address</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="describe_this_location_in_short">Describe this location in short</string>
    <string name="latitude_d">Latitude: %.2f</string>
    <string name="longitude_d">Longitude: %.2f</string>
    <string name="save_location">Save Location</string>
    <string name="failed_to_add_new_location">Failed to add new location</string>
    <string name="no_location_selected">No location selected!</string>
    <string name="attendance_failed">Attendance Failed</string>
    <string name="attendance_success">Attendance Success</string>
    <string name="swipe_to_punch_in">Swipe To Punch In</string>
</resources>