<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.register.RegisterFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_24cdp"
            android:layout_marginHorizontal="@dimen/_24cdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/primary"
                    android:textAppearance="@style/AppTheme.TextAppearance.Heading4.SemiBold"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_form"
                    android:textColor="@color/grey"
                    android:includeFontPadding="false"
                    android:textAppearance="@style/AppTheme.TextAppearance.Body.M.Medium"
                    android:textAlignment="textStart"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name_required"
                android:textAppearance="@style/AppTheme.TextAppearance.Body.M.Medium"
                android:layout_marginTop="@dimen/_32cdp"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/AppTheme.TextInputLayout.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    style="@style/AppTheme.TextInputEditText.Default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_full_name"
                    android:imeOptions="actionNext"
                    android:inputType="textShortMessage"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_required"
                android:textAppearance="@style/AppTheme.TextAppearance.Body.M.Medium"
                android:layout_marginTop="@dimen/_24cdp"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/AppTheme.TextInputLayout.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    style="@style/AppTheme.TextInputEditText.Default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_email"
                    android:imeOptions="actionNext"
                    android:inputType="textShortMessage"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_required"
                android:textAppearance="@style/AppTheme.TextAppearance.Body.M.Medium"
                android:layout_marginTop="@dimen/_16cdp"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/AppTheme.TextInputLayout.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleTint="@color/grey">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    style="@style/AppTheme.TextInputEditText.Default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_confirmation_required"
                android:textAppearance="@style/AppTheme.TextAppearance.Body.M.Medium"
                android:layout_marginTop="@dimen/_16cdp"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/AppTheme.TextInputLayout.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleTint="@color/grey">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password_confirm"
                    style="@style/AppTheme.TextInputEditText.Default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_your_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40cdp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register"
                    style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/register"/>
                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/primary"
                    android:visibility="gone"/>
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textAppearance="@style/AppTheme.TextAppearance.Body.M.Medium"
                android:textColor="@color/grey"
                android:layout_marginTop="@dimen/_16cdp"
                android:includeFontPadding="false"
                android:layout_gravity="center_horizontal"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                style="@style/Widget.Material3.Button.TextButton"
                android:minHeight="0dp"
                android:textAppearance="@style/AppTheme.TextAppearance.Body.M.Semibold"
                android:layout_gravity="center_horizontal"
                android:paddingVertical="0dp"
                android:paddingHorizontal="0dp"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>