<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.login.LoginFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_24cdp">
        <ImageView
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_170sdp"
            android:src="@drawable/illust_login"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:includeFontPadding="false"
            android:textAppearance="@style/AppTheme.TextAppearance.Heading4.SemiBold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="@style/AppTheme.TextAppearance.Body.M.Medium"
            android:layout_marginTop="@dimen/_24cdp"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TextInputLayout.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                style="@style/AppTheme.TextInputEditText.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:imeOptions="actionNext"
                android:inputType="textShortMessage"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAppearance="@style/AppTheme.TextAppearance.Body.M.Medium"
            android:layout_marginTop="@dimen/_16cdp"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TextInputLayout.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/show_password_selector"
            app:passwordToggleTint="@color/grey">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                style="@style/AppTheme.TextInputEditText.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="@dimen/_32cdp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/_40cdp">
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_marginHorizontal="@dimen/_16cdp"
                android:layout_marginVertical="@dimen/_2sdp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grey"/>
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            app:strokeWidth="1dp"
            app:icon="@drawable/ic_google"
            android:text="@string/login_with_google"
            android:textColor="@color/black"
            app:iconPadding="@dimen/_8cdp"
            app:iconGravity="textStart"
            app:iconTintMode="add"
            app:iconTint="@color/transparent"
            app:strokeColor="@color/grey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_any_account"
            android:textAppearance="@style/AppTheme.TextAppearance.Body.M.Medium"
            android:textColor="@color/grey"
            android:layout_marginTop="@dimen/_16cdp"
            android:includeFontPadding="false"
            android:layout_gravity="center_horizontal"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            style="@style/Widget.Material3.Button.TextButton"
            android:minHeight="0dp"
            android:textAppearance="@style/AppTheme.TextAppearance.Body.M.Semibold"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="0dp"
            android:paddingHorizontal="0dp"/>
    </LinearLayout>
</FrameLayout>