<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/_24cdp"
    android:background="@drawable/bg_rounded_24_top">
    <TextView
        android:id="@+id/tv_select_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textAppearance="@style/AppTheme.TextAppearance.Body.XL.SemiBold"
        app:layout_constraintTop_toTopOf="@id/btn_close"
        app:layout_constraintBottom_toBottomOf="@id/btn_close"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.IconButton"
        app:icon="@drawable/ic_cross"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:iconSize="32dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:padding="0dp"/>
    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8cdp"
        android:text="@string/are_you_sure_want_to_logout"
        app:layout_constraintTop_toBottomOf="@id/tv_select_location"
        android:textAppearance="@style/AppTheme.TextAppearance.Body.M"
        android:textColor="@color/grey"/>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/tv_desc"
        android:layout_marginTop="@dimen/_24cdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/state_negative_60"
            android:text="@string/logout"
            android:layout_weight="1"/>
        <View
            android:layout_width="@dimen/_8cdp"
            android:layout_height="0dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:strokeColor="@color/state_negative_60"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/cancel"
            android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>